--- a/BackEnd/API/easyDrive/src/main/resources/application.properties
+++ b/BackEnd/API/easyDrive/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=easyDrive
-spring.datasource.url=jdbc:postgresql://localhost:5432/EasyDrive
+spring.datasource.url=jdbc:postgresql://gaudily-diverse-javelin.data-1.use1.tembo.io:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=0IXxp9sryecUpmJr
 spring.datasource.driver-class-name=org.postgresql.Driver
